converted to use jdk 1.8 only